--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -8,9 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    {{#route}}
-      {{page}}
-    {{/route}}
+    {% block content %}{% endblock %}
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   </body>
 </html>
