Initial layout idea

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -6,9 +6,40 @@
     <title>SSE Members</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap-grid.min.css" integrity="sha256-t2isRyVw7Q0PDz0Jea63+FLQPJb457Lay29S+NTiBZA=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap-reboot.min.css" integrity="sha256-ZeIRHNBrNlXFlcfvaKsx9S1BOwWJ42hBund78iurMLw=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha256-m/h/cUDAhf6/iBRixTbuc8+Rg2cIETQtPcH9D3p2Kg0=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" />
+    <link href="/res/styles/main.css" rel="stylesheet">
   </head>
   <body>
-    {% block content %}{% endblock %}
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+
+    <div class="site-wrapper">
+      <div class="site-wrapper-inner">
+        <div class="cover-container">
+          <div class="masthead clearfix">
+            <div class="inner">
+              <h3 class="masthead-brand">SSE Alumni Directory</h3>
+              <nav class="nav nav-masthead">
+                <a class="nav-link{% if request.path == '/home' or request.path == '/'%} active{% endif %}" href="/home">Home</a>
+                <a class="nav-link{% if request.path == '/search' %} active{% endif %}" href="/search">Search</a>
+                <a class="nav-link{% if request.path == '/login' %} active{% endif %}" href="/login">Login</a>
+                <!--{% block nav %}{% endblock %}-->
+              </nav>
+            </div>
+          </div>
+          {% block content %}{% endblock %}
+          <div class="mastfoot">
+            <div class="inner">
+              <p>All content is Copyright © 2017 <a href="http://sse.rit.edu">Society of Software Engineers</a>.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.5/umd/popper.min.js" integrity="sha256-jpW4gXAhFvqGDD5B7366rIPD7PDbAmqq4CO0ZnHbdM4=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha256-DiWJXXyq81WlPRnDfGmgYZj2aOVCKyEdJ1l+2TmDuAs=" crossorigin="anonymous"></script>
   </body>
 </html>
