Fix up the home view

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -14,7 +14,8 @@
   I'll just leave this here as a placeholder for now I guess.
   </p>
   <p class="lead">
-  <a href="http://getbootstrap.com/docs/4.0/examples/cover/#" class="btn btn-lg btn-secondary">Learn more</a>
+  <a href="/login" class="btn btn-lg btn-secondary btn-login">Login</a>
+  <a href="/search" class="btn btn-lg btn-secondary">Search</a>
   </p>
 </div>
 {% endblock %}
