--- a/src/templates/static/styles/main.css
+++ b/src/templates/static/styles/main.css
@@ -17,8 +17,12 @@ a:hover {
   text-shadow: none; /* Prevent inheritance from `body` */
   background-color: #fff;
   border: .05rem solid #fff;
+  min-width: 120px;
 }
 
+.btn-login {
+  margin-right: 22px;
+}
 
 /*
  * Base structure
@@ -42,7 +46,7 @@ body {
   height: 100%; /* For at least Firefox */
   min-height: 100%;
   -webkit-box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
-          box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
+  box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
 }
 .site-wrapper-inner {
   display: table-cell;
