Setup project for deployment
Update README.md

Update README.md

Add testing to circle config

dockerizing build

docker config update

added docker machine

still working

trying something

keeping on keeping on

things are working, just updating docker hub stuff

changed docker file for ci build

Update credential var names

Route through members

Change url for css

Add a slash to /members/

Just kidding, remove /members/

Revert "Just kidding, remove /members/"

This reverts commit 10ba153b759760498bf53a5099a8f272174f52b9.

Update links with /members

Okay im pretty sure this is the fix

docker auto deploy

Didn't pass the tag

added hook from prod deploy and changed stack name to web

Update README.md

Update README.md

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -14,8 +14,8 @@
   I'll just leave this here as a placeholder for now I guess.
   </p>
   <p class="lead">
-  <a href="/login" class="btn btn-lg btn-secondary btn-login">Login</a>
-  <a href="/search" class="btn btn-lg btn-secondary">Search</a>
+  <a href="/members/login" class="btn btn-lg btn-secondary btn-login">Login</a>
+  <a href="/members/search" class="btn btn-lg btn-secondary">Search</a>
   </p>
 </div>
 {% endblock %}
