--- a/public/main.css
+++ b/public/main.css
@@ -24,6 +24,7 @@ a:hover {
   margin-right: 22px;
 }
 
+
 /*
  * Base structure
  */
@@ -40,10 +41,10 @@ body {
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
-.site-wrapper {
+/* .site-wrapper {
   display: table;
   width: 100%;
-  height: 100%; /* For at least Firefox */
+  height: 100%;
   min-height: 100%;
   -webkit-box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
   box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
@@ -55,7 +56,7 @@ body {
 .cover-container {
   margin-right: auto;
   margin-left: auto;
-}
+} */
 
 /* Padding for spacing */
 .inner {
